--- a/rails_app/app/assets/stylesheets/components/users/show.scss
+++ b/rails_app/app/assets/stylesheets/components/users/show.scss
@@ -93,6 +93,7 @@
               }
               @at-root {
                 #{&}_text {
+                  word-wrap: break-word;
                   font-size: $f_size_pc_s;
                   @include sp {
                     font-size: $f_size_sp_s;
